@@ -1,39 +1,39 @@
 plugins {
     id 'application'
-    id 'airbyte-docker'
-    id 'airbyte-integration-test-java'
+    id 'airbyte-bulk-connector'
+}
+
+airbyteBulkConnector {
+    core = 'load'
+    toolkits = ['load-s3', 'load-avro', 'load-aws']
+    cdk = 'local'
 }
 
 application {
-    mainClass = 'io.airbyte.integrations.destination.s3.S3Destination'
-    applicationDefaultJvmArgs = ['-XX:MaxRAMPercentage=75.0']
+    mainClass = 'io.airbyte.integrations.destination.s3_v2.S3V2Destination'
+
+    applicationDefaultJvmArgs = [
+            '-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0',
+//            Uncomment to run locally:
+//          '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+//            Uncomment to enable remote profiling:
+//            '-XX:NativeMemoryTracking=detail',
+//            '-Djava.rmi.server.hostname=localhost',
+//            '-Dcom.sun.management.jmxremote=true',
+//            '-Dcom.sun.management.jmxremote.port=6000',
+//            '-Dcom.sun.management.jmxremote.rmi.port=6000',
+//            '-Dcom.sun.management.jmxremote.local.only=false',
+//            '-Dcom.sun.management.jmxremote.authenticate=false',
+//            '-Dcom.sun.management.jmxremote.ssl=false'
+    ]
 }
 
-dependencies {
-    implementation project(':airbyte-config:models')
-    implementation project(':airbyte-protocol:models')
-    implementation project(':airbyte-integrations:bases:base-java')
-    implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
+// Uncomment to run locally
+//run {
+//    standardInput = System.in
+//}
 
-    // csv
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.11.978'
-    implementation 'org.apache.commons:commons-csv:1.4'
-    implementation 'com.github.alexmojaki:s3-stream-upload:2.2.2'
-
-    // parquet
-    implementation group: 'org.apache.hadoop', name: 'hadoop-common', version: '3.3.0'
-    implementation group: 'org.apache.hadoop', name: 'hadoop-aws', version: '3.3.0'
-    implementation group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '3.3.0'
-    implementation group: 'org.apache.parquet', name: 'parquet-avro', version: '1.12.0'
-    implementation('tech.allegro.schema.json2avro:converter') {
-        version {
-            branch = 'master'
-        }
-    }
-
-    testImplementation 'org.apache.commons:commons-lang3:3.11'
-    testImplementation "org.mockito:mockito-inline:4.1.0"
-
-    integrationTestJavaImplementation project(':airbyte-integrations:bases:standard-destination-test')
-    integrationTestJavaImplementation project(':airbyte-integrations:connectors:destination-s3')
+// Exclude conflicting log4j-over-slf4j dependency
+configurations.all {
+        exclude group: "org.slf4j", module: "slf4j-reload4j"
 }
