@@ -1,48 +1,47 @@
 plugins {
-    id 'application'
-    id 'airbyte-docker'
-    id 'airbyte-integration-test-java'
+    id 'airbyte-java-connector'
+}
+
+airbyteJavaConnector {
+    cdkVersionRequired = '0.46.0'
+    features = ['db-destinations', 's3-destinations', 'typing-deduping']
+    useLocalCdk = false
+}
+
+java {
+    // TODO: rewrite code to avoid javac wornings in the first place
+    compileJava {
+        options.compilerArgs += "-Xlint:-this-escape"
+    }
 }
 
 application {
-    mainClass = 'io.airbyte.integrations.destination.snowflake.SnowflakeDestination'
+    mainClass = 'io.airbyte.integrations.destination.snowflake.SnowflakeDestinationKt'
 // enable when profiling
     applicationDefaultJvmArgs = [
-
+            '-XX:+ExitOnOutOfMemoryError',
             '-XX:MaxRAMPercentage=75.0',
+            '-XX:NativeMemoryTracking=detail',
+            '-XX:+UnlockDiagnosticVMOptions',
+            '-XX:GCLockerRetryAllocationCount=100',
 //            '-XX:NativeMemoryTracking=detail',
-//            "-Djava.rmi.server.hostname=localhost",
+//            '-Djava.rmi.server.hostname=localhost',
 //            '-Dcom.sun.management.jmxremote=true',
 //            '-Dcom.sun.management.jmxremote.port=6000',
-//            "-Dcom.sun.management.jmxremote.rmi.port=6000",
-//            '-Dcom.sun.management.jmxremote.local.only=false',
+//            '-Dcom.sun.management.jmxremote.rmi.port=6000',
+//            '-Dcom.sun.management.jmxremote.local.only=false'
 //            '-Dcom.sun.management.jmxremote.authenticate=false',
 //            '-Dcom.sun.management.jmxremote.ssl=false',
-//            '-agentpath:/usr/local/YourKit-JavaProfiler-2021.3/bin/linux-x86-64/libyjpagent.so=port=10001,listen=all'
     ]
 
 }
 
+integrationTestJava {
+    // This is needed to make the destination-snowflake tests succeed - https://github.com/snowflakedb/snowflake-jdbc/issues/589#issuecomment-983944767
+    jvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
+}
+
 dependencies {
-    implementation 'com.google.cloud:google-cloud-storage:1.113.16'
-    implementation 'com.google.auth:google-auth-library-oauth2-http:0.25.5'
-    implementation 'net.snowflake:snowflake-jdbc:3.13.9'
-    implementation 'org.apache.commons:commons-csv:1.4'
-    implementation 'com.github.alexmojaki:s3-stream-upload:2.2.2'
-    implementation "io.aesy:datasize:1.0.0"
-
-    implementation project(':airbyte-config:models')
-    implementation project(':airbyte-db:lib')
-    implementation project(':airbyte-integrations:bases:base-java')
-    implementation project(':airbyte-integrations:connectors:destination-jdbc')
-    implementation project(':airbyte-integrations:connectors:destination-s3')
-    implementation project(':airbyte-protocol:models')
-
-
-    integrationTestJavaImplementation project(':airbyte-integrations:bases:standard-destination-test')
-    integrationTestJavaImplementation project(':airbyte-integrations:connectors:destination-snowflake')
-    integrationTestJavaImplementation 'org.apache.commons:commons-lang3:3.11'
-
-    implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
-    integrationTestJavaImplementation files(project(':airbyte-integrations:bases:base-normalization').airbyteDocker.outputs)
+    implementation 'net.snowflake:snowflake-jdbc:3.20.0'
+    implementation 'org.apache.commons:commons-text:1.12.0'
 }
